--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap&effect=font-effect-neon|3d-float");
 @import url("https://fonts.googleapis.com/css2?family=Rubik Pixels:wght@100;200;300;400;500;600;700;800;900&display=swap&effect=font-effect-neon|3d-float");
+@import url("https://fonts.googleapis.com/css2?family=Bungee&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,7 +9,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", "Rubik Pixels", sans-serif, ;
+  font-family: "Poppins", "Bungee", "Rubik Pixels", sans-serif, ;
   scroll-behavior: smooth;
   color-scheme: dark;
 }
